fixed text color

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,7 +5,7 @@
   --text-color: #333;
   --text-reverse: #dfdfdf;
   --text-muted: #666;
-  --text-muted_reverse: #cacaca;
+  --text-muted-reverse: #ffffff;
   --bg-1: #FFEED2;
   --bg-2: #FFD28F;
   --bg-3: #FFC963;
